<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_90"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:id="@+id/timer_main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_15"
        android:background="@drawable/timer_gradient"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".22"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/classes_text">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_ready"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.10"/>
            <TextView
                android:id="@+id/ready_exams_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_ready_for_exams"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_ready"
                app:layout_constraintBottom_toTopOf="@+id/guideline_timer"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_timer_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75"/>
            <FrameLayout
                android:id="@+id/cv_hours_first"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_width="@dimen/time_item_width"
                android:layout_height="@dimen/time_item_height"
                android:layout_marginEnd="4dp"
                android:background="@drawable/round_corners_time_item"
                app:layout_constraintTop_toBottomOf="@+id/guideline_timer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cv_hours_second"
                app:layout_constraintBottom_toTopOf="@+id/guideline_timer_end">
                <TextView
                    android:id="@+id/text_hours_first"
                    android:gravity="center"
                    android:text="@string/time_default"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/cv_hours_second"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_width="@dimen/time_item_width"
                android:layout_height="@dimen/time_item_height"
                android:layout_marginEnd="@dimen/margin_6"
                android:background="@drawable/round_corners_time_item"
                app:layout_constraintTop_toBottomOf="@+id/guideline_timer"
                app:layout_constraintStart_toEndOf="@+id/cv_hours_first"
                app:layout_constraintEnd_toStartOf="@+id/first_delimiter"
                app:layout_constraintBottom_toTopOf="@+id/guideline_timer_end">
                <TextView
                    android:id="@+id/text_hours_second"
                    android:gravity="center"
                    android:text="@string/time_default"
                    android:textSize="@dimen/text_20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>
            <TextView
                android:id="@+id/days_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                app:layout_constraintTop_toBottomOf="@+id/guideline_timer_end"
                app:layout_constraintStart_toStartOf="@+id/cv_hours_first"
                app:layout_constraintEnd_toEndOf="@+id/cv_hours_second"/>
            <TextView
                android:id="@+id/first_delimiter"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:text="@string/delimeter_timer"
                android:textSize="@dimen/text_40"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_4"
                app:layout_constraintTop_toTopOf="@+id/cv_hours_second"
                app:layout_constraintBottom_toBottomOf="@+id/cv_hours_second"
                app:layout_constraintStart_toEndOf="@+id/cv_hours_second"
                app:layout_constraintEnd_toStartOf="@+id/cv_minutes_first"/>
            <FrameLayout
                android:id="@+id/cv_minutes_first"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_width="@dimen/time_item_width"
                android:layout_height="@dimen/time_item_height"
                android:layout_marginEnd="@dimen/margin_4"
                android:background="@drawable/round_corners_time_item"
                app:layout_constraintTop_toBottomOf="@+id/guideline_timer"
                app:layout_constraintStart_toEndOf="@+id/first_delimiter"
                app:layout_constraintEnd_toStartOf="@+id/cv_minutes_second"
                app:layout_constraintBottom_toTopOf="@+id/guideline_timer_end">
                <TextView
                    android:id="@+id/text_minutes_first"
                    android:gravity="center"
                    android:text="@string/time_default"
                    android:textSize="@dimen/text_20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/cv_minutes_second"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_width="@dimen/time_item_width"
                android:layout_height="@dimen/time_item_height"
                android:layout_marginEnd="@dimen/margin_6"
                android:background="@drawable/round_corners_time_item"
                app:layout_constraintTop_toBottomOf="@+id/guideline_timer"
                app:layout_constraintStart_toEndOf="@+id/cv_minutes_first"
                app:layout_constraintEnd_toStartOf="@+id/second_delimiter"
                app:layout_constraintBottom_toTopOf="@+id/guideline_timer_end">
                <TextView
                    android:id="@+id/text_minutes_second"
                    android:gravity="center"
                    android:text="@string/time_default"
                    android:textSize="@dimen/text_20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                app:layout_constraintTop_toBottomOf="@+id/guideline_timer_end"
                app:layout_constraintStart_toStartOf="@+id/cv_minutes_first"
                app:layout_constraintEnd_toEndOf="@+id/cv_minutes_second"/>
            <TextView
                android:id="@+id/second_delimiter"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:text="@string/delimeter_timer"
                android:textSize="@dimen/text_40"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_4"
                app:layout_constraintTop_toTopOf="@+id/cv_hours_second"
                app:layout_constraintBottom_toBottomOf="@+id/cv_hours_second"
                app:layout_constraintStart_toEndOf="@+id/cv_minutes_second"
                app:layout_constraintEnd_toStartOf="@+id/cv_seconds_first"/>
            <FrameLayout
                android:id="@+id/cv_seconds_first"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_width="@dimen/time_item_width"
                android:layout_height="@dimen/time_item_height"
                android:layout_marginEnd="@dimen/margin_4"
                android:background="@drawable/round_corners_time_item"
                app:layout_constraintTop_toBottomOf="@+id/guideline_timer"
                app:layout_constraintStart_toEndOf="@+id/second_delimiter"
                app:layout_constraintEnd_toStartOf="@+id/cv_seconds_second"
                app:layout_constraintBottom_toTopOf="@+id/guideline_timer_end">
                <TextView
                    android:id="@+id/text_seconds_first"
                    android:gravity="center"
                    android:text="@string/time_default"
                    android:textSize="@dimen/text_20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/cv_seconds_second"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_width="@dimen/time_item_width"
                android:layout_height="@dimen/time_item_height"
                android:background="@drawable/round_corners_time_item"
                app:layout_constraintTop_toBottomOf="@+id/guideline_timer"
                app:layout_constraintStart_toEndOf="@+id/cv_seconds_first"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline_timer_end">
                <TextView
                    android:id="@+id/text_seconds_second"
                    android:gravity="center"
                    android:text="@string/time_default"
                    android:textSize="@dimen/text_20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Minutes"
                app:layout_constraintTop_toBottomOf="@+id/guideline_timer_end"
                app:layout_constraintStart_toStartOf="@+id/cv_seconds_first"
                app:layout_constraintEnd_toEndOf="@+id/cv_seconds_second"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <TextView
        android:id="@+id/classes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classes"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/timer_main_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/today_classes"/>
    <TextView
        android:id="@+id/today_classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_14"
        android:textColor="@color/white_80"
        android:layout_marginEnd="@dimen/margin_15"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/timer_main_fragment"
        app:layout_constraintStart_toEndOf="@+id/classes_text"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_today_classes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginStart="@dimen/margin_15"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".20"
        app:layout_constraintTop_toBottomOf="@+id/today_classes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/homework_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homework"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/rv_today_classes"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_homeworks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginStart="11dp"
        app:layout_constraintTop_toBottomOf="@+id/homework_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>